fixed login error, fixed navbar gap

--- a/static/home.css
+++ b/static/home.css
@@ -1,9 +1,5 @@
 
-  .mt-6 {
-      margin-top: 3.9rem;
-  }
-
-  .mask{
+   .mask{
     font-style: italic;
     background-color: rgba(0, 0, 0, 0.50);
   }
